[project]
name = "llm-examples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.3.0",
    "duckduckgo-search>=7.2.1",
    "dynaconf>=3.2.6",
    "httpx[socks]>=0.28.1",
    "langchain>=0.0.217",
    "langchain-community>=0.3.14",
    "openai>=1.2",
    "streamlit>=1.28",
    "streamlit-feedback>=0.1.4",
    "trubrics>=1.4.3",
]

[dependency-groups]
dev = [
    "black==23.3.0",
    "mypy==1.4.1",
    "pre-commit==3.3.3",
    "pytest>=8.3.4",
    "watchdog>=6.0.0",
]
lint = [
    "ruff>=0.9.2",
]
